# http-tryout-server

./: Dockerfile  README.md  docker-compose.yml  env.dist  pyproject.toml  server.py
templates/: base.html  home.html  requests.html
