[tool.poetry]
name = "http-tryout-server"
version = "0.1.0"
description = "Simple HTTP Server who register requests and show them into a simple website for learning purposes."
authors = ["lecovi <lecovi@ac.python.org.ar>"]
license = "LGPL 2.1"

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
python-dotenv = "^0.21.0"
flask-sqlalchemy = "^3.0.0"
psycopg2-binary = "^2.9.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
